# OpenSource-FinanceBank

./: .dockerignore  .env.example  .gitignore  .vercelignore  COMPLETE_DELIVERABLES.md  CONTRIBUTING.md  DASHBOARD_BEFORE_AFTER.md  DASHBOARD_IMPROVEMENTS.md  DASHBOARD_TEST_RESULTS.md  DEPLOYMENT_READY.md  Dockerfile  EXECUTIVE_SUMMARY.md  LICENSE  PHASE2_UPDATES.md  PROJECT_COMPLETE.md  QUICK_START.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
apps/demo/: package.json
apps/demo/src/: index.ts
apps/web/: .gitignore  README.md  package.json  tailwind.config.js
apps/web/public/: manifest.json  sw.js
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/analytics/: page.tsx
apps/web/src/app/market/: page.tsx
apps/web/src/app/quick/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/: AIInsights.tsx  AnimatedCard.tsx  CategoryChart.tsx  Dashboard.tsx  DashboardNew.tsx  EnhancedMarketWidget.tsx  InsightsList.tsx  MarketWidget.tsx  MonthlyChart.tsx  PluggyConnectButton.tsx  ServiceWorkerRegister.tsx  SummaryCard.tsx  ThemeToggle.tsx  TransactionList.tsx
apps/web/src/lib/: categorizer.ts  engine.ts  format.ts  metrics.ts  mock-data.ts  theme.ts  types.ts
docs/: 00-summary.md  01-getting-started.md  02-architecture.md  03-packages.md  04-connectors.md  05-core-engine.md  06-ai-agents.md  07-database-supabase.md  08-docker.md  09-cli-reference.md  10-customization.md  11-contributing.md  12-deployment-vercel.md
examples/: sample.csv
scripts/: test-claude.ts  test-openbb.ts  test-pluggy.ts
services/agents/: Dockerfile  pyproject.toml
services/agents/src/agents/: __init__.py  __main__.py  insights.py  server.py
services/agents/src/agents/llm/: __init__.py  anthropic_provider.py  base.py  bedrock.py  gemini_provider.py  ollama_provider.py  openai_provider.py  registry.py
services/openbb/: Dockerfile  pyproject.toml
services/openbb/src/: main.py
(+10 files in other folders)
